# masters-htn

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Classes/: Bullet.cpp  Bullet.h  Camera.cpp  Camera.h  Draw.cpp  Draw.h  Game.cpp  Game.h  Item.cpp  Item.h  Level.cpp  Level.h  Manager.cpp  Manager.h  Tile.cpp  Tile.h
Classes/AI/: AI_Agent.cpp  AI_Agent.h  AI_Info.cpp  AI_Info.h  Action_Handler.cpp  Action_Handler.h  Command_Influence.cpp  Command_Influence.h  Commander.cpp  Commander.h  Enemy_vars.cpp  Enemy_vars.h  Squad.cpp  Squad.h
Classes/AI/Actions/: Act_Choose_Target.cpp  Act_Choose_Target.h  Act_Choose_Target_V2.cpp  Act_Choose_Target_V2.h  Act_Fire.cpp  Act_Fire.h  Act_Follow_Path.cpp  Act_Follow_Path.h  Act_Follow_Path_Orient.cpp  Act_Follow_Path_Orient.h  Act_None.cpp  Act_None.h  Act_Orient.cpp  Act_Orient.h  Act_Pathfind.cpp  Act_Pathfind.h  Act_Place_Item.cpp  Act_Place_Item.h  Act_Query_Squad.cpp  Act_Query_Squad.h  Act_Rand_Pathfind.cpp  Act_Rand_Pathfind.h  Act_Reset_Engaged.cpp  Act_Reset_Engaged.h  Act_Scan.cpp  Act_Scan.h  Act_Set_Support_Location.cpp  Act_Set_Support_Location.h  Act_Setup_Search.cpp  Act_Setup_Search.h  Act_Spot_Search.cpp  Act_Spot_Search.h  Act_Support_Pathfind.cpp  Act_Support_Pathfind.h  Act_Take_Item.cpp  Act_Take_Item.h  Act_Target_Flagged.cpp  Act_Target_Flagged.h  Action.cpp  Action.h
Classes/AI/Planner/: Planner.cpp  Planner.h  WorldState.cpp  WorldState.h
Classes/AI/Planner/Methods/: M_BC_0.cpp  M_BC_0.h  M_BC_1.cpp  M_BC_1.h  M_BC_2.cpp  M_BC_2.h  M_UONE_0.cpp  M_UONE_0.h  M_UTHREE_0.cpp  M_UTHREE_0.h  M_UTHREE_1.cpp  M_UTHREE_1.h  M_UTHREE_2.cpp  M_UTHREE_2.h  M_UTHREE_3.cpp  M_UTHREE_3.h  M_UTWO_0.cpp  M_UTWO_0.h  M_UTWO_1.cpp  M_UTWO_1.h  Method.cpp  Method.h
Classes/AI/Planner/Tasks/: CompoundTask.cpp  CompoundTask.h  Task.cpp  Task.h  Task_BeCommander.cpp  Task_BeCommander.h  Task_FirstIdleToClosestEngaged.cpp  Task_FirstIdleToClosestEngaged.h  Task_FirstIdleToEngaged.cpp  Task_FirstIdleToEngaged.h  Task_FirstIdleToVulA.cpp  Task_FirstIdleToVulA.h  (+18 more)
Classes/AI/State_Machines/: FSM_Default.cpp  FSM_Default.h  FSM_Htn.cpp  FSM_Htn.h  FSM_Rand_V2.cpp  FSM_Rand_V2.h  FSM_Rand_V3.cpp  FSM_Rand_V3.h  FSM_Rand_V4.cpp  FSM_Rand_V4.h  FSM_Squad_V1.cpp  FSM_Squad_V1.h  FSM_Squad_V2.cpp  FSM_Squad_V2.h  FSM_Squad_V3.cpp  FSM_Squad_V3.h  FSM_Squad_V4.cpp  FSM_Squad_V4.h  FSM_Squad_V5.cpp  FSM_Squad_V5.h  StateMachine.cpp  StateMachine.h
Classes/Locations/: Location.cpp  Location.h
Classes/Pathfinding/: Connection.cpp  Connection.h  Graph.cpp  Graph.h  Path.cpp  Path.h  PathFinding.cpp  PathFinding.h
Classes/Utils/: Box.cpp  Box.h  Colours.h  Constants.h  Coord.cpp  Coord.h  Quad.cpp  Quad.h  RGBA.cpp  RGBA.h  Surfaces.cpp  Surfaces.h  Timer.cpp  Timer.h  Utils.cpp  Utils.h  VecXY_Float.cpp  VecXY_Float.h  log.h
Config/: R1_vs_R1.config  Test.config  config.json
Maps/: base.map  newMap.map  small1.map  small2.map  small3.map  stuff.map
cmake/modules/: FindSDL_gfx.cmake
(+434 files in other folders)
